Сделал формы в футере и мадальном окне

--- a/portfolio.html
+++ b/portfolio.html
@@ -198,7 +198,7 @@
                     <li class="item"><a href="tel+380961111111" class="footer-contacts link">+38 096 111 11 11</a></li>
             </div>
             <div class="footer-social-section">
-                <h3 class="footer-social-title">Присоединяйтесь</h3>
+                <h2 class="footer-title">Присоединяйтесь</h2>
                 <ul class="footer-social-list list">
                     <li class="social-list-item">
                         <a href="" class="social-list-link list">
@@ -229,7 +229,17 @@
                         </a>
                     </li>
                 </ul>
-
+            </div>
+            <div class="footer-submit">
+                <h2 class="footer-title">Подпишитесь на рассылку</h2>
+                <form action="" class="submit-form">
+                    <input name="submit-form-email" type="email" class="submit-input" placeholder="E-mail">
+                    <button type="submit" class="submit-form-btn">Подписаться
+                        <svg class="submit-form-icon">
+                            <use href="./images/sprite.svg#icons-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
