--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Наши преимущества -->
         <section class="advantages section">
             <div class="container">
-                <!-- <h2>Наши преимущества</h2> -->
+                <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantages-list list">
                     <li class="advantages-item antenna">
                         <h3 class="advantages-title">Внимание к деталям</h3>
@@ -320,7 +320,7 @@
                     <li class="item"><a href="tel+380961111111" class="footer-contacts link">+38 096 111 11 11</a></li>
             </div>
             <div class="footer-social-section">
-                <h3 class="footer-social-title">Присоединяйтесь</h3>
+                <h2 class="footer-title">Присоединяйтесь</h2>
                 <ul class="footer-social-list list">
                     <li class="social-list-item">
                         <a href="" class="social-list-link list">
@@ -351,11 +351,21 @@
                         </a>
                     </li>
                 </ul>
-
+            </div>
+            <div class="footer-submit">
+                <h2 class="footer-title">Подпишитесь на рассылку</h2>
+                <form action="" class="submit-form">
+                    <input name="submit-form-email" type="email" class="submit-input" placeholder="E-mail">
+                    <button type="submit" class="submit-form-btn">Подписаться
+                        <svg class="submit-form-icon">
+                            <use href="./images/sprite.svg#icons-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
-
+    <!-- ________________BACKDROP______________ -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
            <button class="modal-close-btn" data-modal-close>
@@ -363,6 +373,45 @@
                     <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
            </button>
+           <!--------------------MODAL-FORM ------------------->
+           <h2 class="modal-form-title">Оставьте свои данные, мы вам перезвоним</h2>
+           <form action="" class="modal-form">
+                <label class="modal-form-field">
+                    Имя
+                    <span class="modal-form-input-wrapper">
+                            <input name="form-name" class="modal-form-input" type="text">
+                        <svg class="modal-input-icon">
+                            <use href="./images/sprite.svg#icon-person-black-modal"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label  class="modal-form-field">
+                    Телефон
+                    <span class="modal-form-input-wrapper">
+                        <input name="form-tell" class="modal-form-input" type="tel">
+                    <svg class="modal-input-icon">
+                        <use href="./images/sprite.svg#icon-phone-black-modal"></use>
+                    </svg>
+                    </span>
+                </label>
+                <label class="modal-form-field">
+                    Почта
+                    <span class="modal-form-input-wrapper">
+                            <input name="form-email" class="modal-form-input" type="email">
+                        <svg class="modal-input-icon">
+                            <use href="./images/sprite.svg#icon-email-black-modal"></use>
+                        </svg>
+                    </span>
+                    
+                </label>
+                <label for="" class="modal-form-field">
+                    Комментарий
+                    <textarea name="form-field" class="modal-form-message" placeholder="Введите текст"></textarea>
+                </label>
+                <input id="form-term" name="form-term" type="checkbox" name="" class="modal-form-term visually-hidden">   
+                <label for="form-term" class="modal-form-text-descr">Соглашаюсь с рассылкой и принимаю <a class="modal-form-desc-conditions" href="">Условия договора</a></label>  
+                <button type="submit" class="modal-form-button">Отправить</button>
+           </form>
         </div>
     </div>
 
