правка maring в footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -188,7 +188,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-flex container">
-            <div class="footer-wrapper ">
+            <div class="footer-wrapper">
                 <div class="footer-logo">
                     <a href="index.html" class="footer-logo logo"><span class="accent">Web</span><span class="logo-studio">Studio</span></a>
                 </div>    
@@ -230,7 +230,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-submit">
+            <div class="footer-submit container">
                 <h2 class="footer-title">Подпишитесь на рассылку</h2>
                 <form action="" class="submit-form">
                     <input name="submit-form-email" type="email" class="submit-input" placeholder="E-mail">
